WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147237
Should not allow previews of 1x1 images
https://bugs.webkit.org/show_bug.cgi?id=147237
Summary
Should not allow previews of 1x1 images
Beth Dakin
Reported
2015-07-23 13:39:04 PDT
We should not allow previews of 1x1 images
Attachments
Patch
(4.22 KB, patch)
2015-07-23 13:42 PDT
,
Beth Dakin
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2015-07-23 13:42:39 PDT
Created
attachment 257373
[details]
Patch
Tim Horton
Comment 2
2015-07-23 13:45:14 PDT
Comment on
attachment 257373
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=257373&action=review
> Source/WebKit2/WebProcess/WebPage/ios/WebPageIOS.mm:2226 > + info.imageURL = [(NSURL *)element->document().completeURL(renderImage.cachedImage()->url()) absoluteString];
We really need to helper function the crap out of this beast.
Beth Dakin
Comment 3
2015-07-23 13:55:39 PDT
Thanks Tim!
http://trac.webkit.org/changeset/187250
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug