Should not allow previews of 1x1 images https://bugs.webkit.org/show_bug.cgi?id=147237 -and corresponding- rdar://problem/21968460

Reviewed by Tim Horton.

1x1 images are used on some sites to cover actual images, which leads to a
misleading preview experience. There is not any reason why you would really
want to preview an image this small nor any reason to believe that the
preview would result in anything useful.
* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::getPositionInformation):



Canonical link: https://commits.webkit.org/165304@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187250 268f45cc-cd09-0410-ab3c-d52691b4dbfc